; ModuleID = '/home/carl/AnghaBench/tmux/extr_options.c_options_parse_get.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_options.c_options_parse_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.options_entry = type { i32 }
%struct.options = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.options_entry* @options_parse_get(%struct.options* %0, i8* %1, i32* %2, i32 %3) #0 {
  %5 = alloca %struct.options_entry*, align 8
  %6 = alloca %struct.options*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.options_entry*, align 8
  %11 = alloca i8*, align 8
  store %struct.options* %0, %struct.options** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  %12 = load i8*, i8** %7, align 8
  %13 = load i32*, i32** %8, align 8
  %14 = call i8* @options_parse(i8* %12, i32* %13)
  store i8* %14, i8** %11, align 8
  %15 = load i8*, i8** %11, align 8
  %16 = icmp eq i8* %15, null
  br i1 %16, label %17, label %18

17:                                               ; preds = %4
  store %struct.options_entry* null, %struct.options_entry** %5, align 8
  br label %33

18:                                               ; preds = %4
  %19 = load i32, i32* %9, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %25

21:                                               ; preds = %18
  %22 = load %struct.options*, %struct.options** %6, align 8
  %23 = load i8*, i8** %11, align 8
  %24 = call %struct.options_entry* @options_get_only(%struct.options* %22, i8* %23)
  store %struct.options_entry* %24, %struct.options_entry** %10, align 8
  br label %29

25:                                               ; preds = %18
  %26 = load %struct.options*, %struct.options** %6, align 8
  %27 = load i8*, i8** %11, align 8
  %28 = call %struct.options_entry* @options_get(%struct.options* %26, i8* %27)
  store %struct.options_entry* %28, %struct.options_entry** %10, align 8
  br label %29

29:                                               ; preds = %25, %21
  %30 = load i8*, i8** %11, align 8
  %31 = call i32 @free(i8* %30)
  %32 = load %struct.options_entry*, %struct.options_entry** %10, align 8
  store %struct.options_entry* %32, %struct.options_entry** %5, align 8
  br label %33

33:                                               ; preds = %29, %17
  %34 = load %struct.options_entry*, %struct.options_entry** %5, align 8
  ret %struct.options_entry* %34
}

declare dso_local i8* @options_parse(i8*, i32*) #1

declare dso_local %struct.options_entry* @options_get_only(%struct.options*, i8*) #1

declare dso_local %struct.options_entry* @options_get(%struct.options*, i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
